--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -64,148 +64,17 @@ a.to-nav {
 	text-transform: uppercase;
 }
 
-a.to-nav:hover,
-a.to-nav:focus {
-	color: #ffffff;
-	background: rgb(48, 47, 47);
+.historycards {
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-#aboutme {
-  background-color: #c9f7e7;
-  color: #6b6969;
-  padding-bottom: 2em;
-}
-
-#aboutme h1 {
-  padding-top: 2em;
-}
-
-#aboutme p {
-  display: flex;
-  justify-content: space-between;
-  
-}
-
-#aboutme .content-wrap,
-#aboutme-a .content-wrap {
-  padding: 0 1.5em;
-}
-
-.card-content {
-  padding: 1.5em;
-}
-
-#schedule, #history {
-  display: block;
-  padding-top: 2em ; /* 12 / 18 = 0.7058823529*/
-  padding-right: 1em; /* 24 / 18 = 1.4117647059 */
-  padding-left: 1em; /* 24 / 18 = 1.4117647059 */
-  padding-bottom: 1em ; /* 60 / 18 = 3.5294117647 */
-}
-
-#schedule, #history h2{
-  padding-bottom: 1.33333333333em;
-}
-
-#schedule, #history ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-#schedule li {
-  margin-bottom: 1em;
-  background: #fff;
-  color: #333;
-}
-
-#about li {
-  margin-bottom: 1em;
-  background: #fff;
-  color: #333;
-}
-
-#adapictures li{
-  margin-bottom: 1em;
-  background: rgb(236, 162, 127);
-  color: #333;
-}
-
-#computing {
-  margin-bottom: 1em;
-  background: rgb(171, 231, 250);
-  color: #333;
-}
-
-#funfacts {
-  margin-bottom: 1em;
-  background: rgb(224, 180, 241);
-  color: #333;
-}
-
-#faq {
-  margin-bottom: 1em;
-  background: rgb(247, 174, 178);
-  color: #333;
-}
-
-#byron {
-  margin-bottom: 1em;
-  background: rgb(174, 247, 216);
-  color: #333;
-}
-
-#game {
-  margin-bottom: 1em;
-  background: rgb(248, 235, 177);
-  color: #333;
-}
-
-@media screen and (min-width: 100px) {
-  .ft-main {
-    justify-content: space-evenly;
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr repeat(4, minmax(auto, 25em)) 1fr;
-  }
-
-  .content-wrap,
-  #schedule ul {
-    grid-column: 2/8;
-  }
-
-  #schedule ul {
-    display: flex;
-    justify-content: space-around;
-  }
-
-  #schedule li {
-    width: 19%; /*Had to play around to get this # */
-  }
-
-  #history ul {
-    grid-column: 2/8;
-  }
-
-  #history ul {
-    display: flex;
-    justify-content: space-around;
-  }
-
-  #history li {
-    width: 19%; /*Had to play around to get this # */
-  }
-
-}
-
-@media screen and (min-width: 1240px) {
-  .ft-main {
-    justify-content: space-evenly;
-  }
+.card {
+  background-color: dodgerblue;
+  color: white;
+  padding: 1em;
 }
 
 #footer {
