--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,7 +12,7 @@ html {
   font-family: Arial, Helvetica, sans-serif;;
   font-size: 1.125em; /* 18 / 16 = 1.125 */
   line-height: 1.3333333333em; /* 24 / 18 = 1.3333333333 */
-  text-align: center;
+  text-align: left;
 }
 
 h1,
@@ -23,22 +23,29 @@ h3 {
   text-transform: uppercase;
 }
 
-p {
+p,ul,ol {
   padding-bottom: 0.6666666667em; /* 12 / 18 = 0.6666666667 */
   padding-right: 0.6666666667em; /* 12 / 18 = 0.6666666667 */
   padding-left: 0.6666666667em; /* 12 / 18 = 0.6666666667 */
 }
-ol,ul {
+ul {
+  list-style-type: square;
   padding-bottom: 0.3333333333em; /* 6 / 18 = 0.3333333333 */
 }
 li {
   padding-bottom: 0.3333333333em; /* 6 / 18 = 0.3333333333 */
+}
+ol {
+  list-style-type: lower-roman;
+  margin-left: 1em;
+  padding: 0.3333333333em; /* 6 / 18 = 0.3333333333 */
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+  padding-bottom: 1em;
 }
 
 #header {
@@ -118,6 +125,70 @@ a.to-nav:focus {
 
 .card-content {
   padding: 1.5em;
+}
+
+.historycards {
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-row: auto / span 2;
+}
+
+.card {
+  background-color: dodgerblue;
+  color: white;
+  padding: 1em;
+}
+
+#citations {
+  padding-left: 1.5em;
+  background-color: white;
+  color:rgb(150, 150, 150)
+}
+
+#citations h2 {
+  padding-top: 1.5em;
+}
+
+#about, #babbagework {
+  background-color: #c5ae93;
+}
+
+#womenincs, #adababbage {
+  background-color: #9ec3d4;
+}
+
+#mathwork, #demorgan {
+  background-color: #c593a0;
+}
+
+#adanote, #byron {
+  background-color: #9bc593;
+}
+
+#adavision, #byronimpact {
+  background-color: #bfc48b;
+}
+
+#patriarchy, #funfacts {
+  background-color: #9b93c5;
+}
+
+#popculture, #faq1 {
+  background-color: #93c5ba;
+}
+
+#steampunk, #faq2 {
+  background-color: #6d6c43;
+}
+
+#acmbook, #game {
+  background-color: #5f5f72;
+}
+
+#babbage, #moreinfo {
+  background-color: #c59393;
 }
 
 
