Remove div with card class from schedule section on main page

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -18,7 +18,7 @@ html {
 h1,
 h2,
 h3 {
-  padding-bottom: 1em;
+  padding-bottom: 0.77777777777em; /* 14 / 18 = 0.6666666667 */
   font-weight: bold;
   text-transform: uppercase;
 }
