--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -84,11 +84,12 @@ a.to-nav:focus {
 #aboutme {
   background-color: #c9f7e7;
   color: #6b6969;
-  padding-bottom: 2em;
+  padding-bottom: 2em; /* 36 / 18 = 1.4117647059 */
+  padding-left: 1.4117647059em; /* 24 / 18 = 1.4117647059 */
 }
 
 #aboutme h1 {
-  padding-top: 2em;
+  padding-top: 2em; /* 36 / 18 = 1.4117647059 */
 }
 
 #aboutme p {
@@ -97,18 +98,12 @@ a.to-nav:focus {
 
 }
 
-#aboutme .content-wrap,
-#aboutme-a .content-wrap {
-  padding: 0 1.5em;
-}
-
-
 #schedule {
   display: block;
-  padding-top: 2em ; /* 12 / 18 = 0.7058823529*/
-  padding-right: 1em; /* 24 / 18 = 1.4117647059 */
-  padding-left: 1em; /* 24 / 18 = 1.4117647059 */
-  padding-bottom: 1em ; /* 60 / 18 = 3.5294117647 */
+  padding-top: .7058823529em ; /* 12 / 18 = 0.7058823529*/
+  padding-right: 1.4117647059em; /* 24 / 18 = 1.4117647059 */
+  padding-left: 1.4117647059em; /* 24 / 18 = 1.4117647059 */
+  padding-bottom: 1.4117647059em ; /* 24 / 18 = 1.4117647059 */
 }
 
 #schedule h2{
