--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -158,7 +158,7 @@ a.to-nav:focus {
   padding-left: 1.4117647059em; /* 24 / 18 = 1.4117647059 */
 }
 
-#aboutme h1 {
+#aboutme h2 {
   padding-top: 2em; /* 36 / 18 = 1.4117647059 */
 }
 
@@ -212,9 +212,12 @@ a.to-nav:focus {
   padding-bottom: 0;
 }
 
+#contacttitle {
+  padding-top: 1.4117647059em ; /* 24 / 18 = 1.4117647059 */
+}
+
 #contact {
   padding-bottom: 1.4117647059em ; /* 24 / 18 = 1.4117647059 */
-  padding-top: 1.4117647059em ; /* 24 / 18 = 1.4117647059 */
 }
 
 #iit {
