--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -10,7 +10,7 @@ video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,a
 html {
   color: #eee;
   background: #111;
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif; 
+  font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif; 
   font-size: 1.125em; /* 18 / 16 = 1.125 */
   line-height: 1.3333333333em; /* 24 / 18 = 1.3333333333 */
   text-align: left;
@@ -23,6 +23,8 @@ h3 {
   padding-left: 0.6666666667em; /* 12 / 18 = 0.6666666667 */
   font-weight: bold;
   text-transform: uppercase;
+  font-size: 1.25em; /* 20 / 16 = 1.25 */
+  line-height: 1.2em; /* 24 / 20 = 1.2 */
 }
 
 p {
@@ -90,6 +92,7 @@ a.to-nav:focus {
   grid-gap: 1em;
   grid-template-columns: repeat(auto-fit, minmax(16.6666667em, 1fr)); /* 300 / 18 = 16.6666667 */
   grid-row: auto / span 2;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .card {
