--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -14,6 +14,7 @@ html {
   font-size: 1.125em; /* 18 / 16 = 1.125 */
   line-height: 1.3333333333em; /* 24 / 18 = 1.3333333333 */
   text-align: left;
+  letter-spacing: 0.05555555555em; /* 1 / 18 = 0.05555555555  */
 }
 
 h1,
@@ -25,6 +26,7 @@ h3 {
   text-transform: uppercase;
   font-size: 1.25em; /* 20 / 16 = 1.25 */
   line-height: 1.2em; /* 24 / 20 = 1.2 */
+  letter-spacing: 0.11111111111em; /* 2 / 18 = 0.11111111111 */
 }
 
 p {
